--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Home</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="name">Julia Arukakkal</div>
+        <div class="links">
+            <ul>
+                <li><a href="index.html"><i class="fa fa-lg fa-home"></i>   Home</a></li>
+                <li><a href="page1.html"><i class="fa fa-lg fa-star"></i>   Overview</a></li>
+                <li><a href="page2.html"><i class="fa fa-lg fa-laptop"></i>   Projects</a></li>
+                <li><a href="page3.html"><i class="fa fa-lg fa-handshake-o"></i>   Service</a></li>
+                <li><a href="page4.html"><i class="fa fa-lg fa-pencil"></i>   Blog</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="image_container">
+        <img src="Landing_Page.png" class="center">
+    </div>
+    <h1 style="text-align:center">Igniting solutions in bioinformatics and in computer science.</h1>
+
+    <nav class="navbar">
+        <div class="links">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
+                <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
+                <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
+
 </html>
