--- a/page1.html
+++ b/page1.html
@@ -3,9 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Overview</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="name">Julia Arukakkal</div>
+        <div class="links">
+            <ul>
+                <li><a href="index.html"><i class="fa fa-lg fa-home"></i>   Home</a></li>
+                <li><a href="page1.html"><i class="fa fa-lg fa-star"></i>   Overview</a></li>
+                <li><a href="page2.html"><i class="fa fa-lg fa-laptop"></i>   Projects</a></li>
+                <li><a href="page3.html"><i class="fa fa-lg fa-handshake-o"></i>   Service</a></li>
+                <li><a href="page4.html"><i class="fa fa-lg fa-pencil"></i>   Blog</a></li>
+            </ul>
+        </div>
+    </nav>
     
+    <h2> About Julia</h2>
+    <p> Hello, my name is Julia Arukakkal. I am a junior Computer Science major at Texas A&M, aiming for a career in technology and software development.
+        Currently, I work in a genomics research lab where I apply my programming skills to analyze, build pipelines, and interpret large genomes. 
+        I enjoy unravelling complex problems and investigating different viewpoints with a team. In addition, I value strong communication & leadership skills 
+        through volunteering, teaching computer science, & leading women-focused organizations. I am eager to use my skills to build exciting and innovative technologies.</p>
+
+    <h2> Technical Skills</h2>
+        <h3> General Programming </h3>
+        <h4> C++</h4>
+        Classes: Data Structures & Algorithms, Computer Organization, Program Design & Concepts
+
+        <h4> Java </h4>
+        Classes: Data Structure & Algorithms, Programming Languages
+
+        <h4>Python</h4>
+        Classes: Engineering Lab 102
+        Teaching: Peer Teacher (Fall 2023)
+        Projects: Used in AI4All to construct Machine Learning Model, Used for SEC Directed Internship for Camera Position Modelling
+        
+
+        <h4>R</h4>
+        Classes: HPRC workshops, Statistics
+        Projects: Used in Aggie Research Project for graphing plots
+
+        <h3> Workflow Management </h3>
+
+        <h4> Nextflow</h4>
+        Projects: Used for a pipeline for figuring out the ancestry of different genes.  
+
+
+        <h4> SnakeMake</h4>
+        Projects: Used to construct and adapt a pipeline for genome processing.
+
+        <h4> SLURM Scheduler/Bash </h4>
+        Regularly use in research labs for scheduling jobs that require a lot of time.
+
+        <h3> Functional Language</h3>
+
+        <h4>Scheme/Dr. Racket</h4>
+        Classes: Program Design & Concepts
+
+        <h3> Assembly </h3>
+        <h4>y86/x86</h4>
+        Classes: Computer Organization, Introduction to Computer Systems(ongoing)
+        Projects: Created y86 64-bit CPU
+
+        <h3> Web/App Development </h3>
+
+        <h4>CSS & HTML</h4>
+        Classes: Foundations of Software Engineering(ongoing)
+        Projects: Constructed research website using customized Bootstrap template 
+
+        <h4>JavaFX</h4>
+        Classes: Program Design & Concepts
+        Projects: WORDLE App
+
+        <h4>OpenGL</h4>
+        Classes: Computer Graphics(ongoing)
+
+
+
+    <h2> Technical Areas of Interest </h2>
+    <h3> Big Data</h3>
+    Through my experience in genomics, I have had the opportunity to work on very large datasets (8 Gb). I enjoy finding patterns in what orginally seems like noise, and being able to tell a story with it. 
+    This interest was furthered through exploring different data structures and their potential to optimize many commercial avenues. In the future, I would like to investigate on methods to make these processes more efficient, such as using GPUs rather than CPUs. 
+
+    <h3>Machine Learning</h3>
+    I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and more predicitive analysises. 
+
+
+    <nav class="navbar">
+        <div class="links">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
+                <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
+                <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
