Updated Landing Page Style#1
updated landing page to be darker background, and adding some photos to use as computer arch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <div class="image_container">
-        <img src="Landing_Page.png" class="center">
+        <img class="center">
     </div>
     <h1 style="text-align:center">Igniting solutions in bioinformatics and in computer science.</h1>
 
