Added updates section elements
Border with canyon for first style sheet
With oval text in the center

--- a/index.html
+++ b/index.html
@@ -24,6 +24,49 @@
         <img class="center">
     </div>
     <h1 style="text-align:center">Igniting solutions in bioinformatics and in computer science.</h1>
+    <h2 style="text-align:center"><i class="fa fa-lg fa-magic"></i>Updates</h2>
+    <div class="flex-box">
+        <div class="geode">
+            <div class="border_container">
+                <div class="oval_text_container">
+                    <a href="page1.html">
+                    New Skills! <br>
+                    Go, OpenGL, SQL
+                    </a>
+                </div>
+            </div>
+        </div> 
+        <div class="geode">
+            <div class="border_container">
+                <div class="oval_text_container">
+                    <a href="page1.html">
+                    New Skills! <br>
+                    Go, OpenGL, SQL
+                    </a>
+                </div>
+            </div>
+        </div> 
+        <div class="geode">
+            <div class="border_container">
+                <div class="oval_text_container">
+                    <a href="page1.html">
+                    New Skills! <br>
+                    Go, OpenGL, SQL
+                    </a>
+                </div>
+            </div>
+        </div> 
+        <div class="geode">
+            <div class="border_container">
+                <div class="oval_text_container">
+                    <a href="page1.html">
+                    New Skills! <br>
+                    Go, OpenGL, SQL
+                    </a>
+                </div>
+            </div>
+        </div> 
+    </div>
 
     <nav class="navbar">
         <div class="links">
@@ -34,6 +77,7 @@
             </ul>
         </div>
     </nav>
+    
 </body>
 
 </html>
