--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <img class="center">
     </div>
     <h1 style="text-align:center">Igniting solutions in bioinformatics and in computer science.</h1>
+    <br>
+    <br>
     <h2 style="text-align:center"><i class="fa fa-lg fa-magic"></i>Updates</h2>
     <div class="flex-box">
         <div class="geode">
             <div class="border_container">
                 <div class="oval_text_container">
                     <a href="page1.html">
-                    New Skills! <br>
+                    Upcoming Skills! <br>
                     Go, OpenGL, SQL
                     </a>
                 </div>
@@ -39,9 +41,18 @@
         <div class="geode">
             <div class="border_container">
                 <div class="oval_text_container">
-                    <a href="page1.html">
-                    New Skills! <br>
-                    Go, OpenGL, SQL
+                    <a href="page2.html">
+                    Upcoming Projects! </a> <br>
+                    <a href="https://hh24.tamuhack.org">HowdyHack</a>
+                </div>
+            </div>
+        </div> 
+        <div class="geode">
+            <div class="border_container">
+                <div class="oval_text_container">
+                    <a href="page3.html">
+                    Upcoming Service! <br>
+                    Creating Website for Service Sorority!
                     </a>
                 </div>
             </div>
@@ -49,19 +60,8 @@
         <div class="geode">
             <div class="border_container">
                 <div class="oval_text_container">
-                    <a href="page1.html">
-                    New Skills! <br>
-                    Go, OpenGL, SQL
-                    </a>
-                </div>
-            </div>
-        </div> 
-        <div class="geode">
-            <div class="border_container">
-                <div class="oval_text_container">
-                    <a href="page1.html">
-                    New Skills! <br>
-                    Go, OpenGL, SQL
+                    <a href="page4.html">
+                    Come visit my blog! 
                     </a>
                 </div>
             </div>
