Adjusted links & centered sunflower
adjusted links and sunflower positioning for second stylesheet

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="geode">
             <div class="border_container">
                 <div class="oval_text_container">
-                    <a href="page2.html">
-                    Upcoming Projects! </a> <br>
-                    <a href="https://hh24.tamuhack.org">HowdyHack</a>
+                    <a href="https://hh24.tamuhack.org">
+                    Upcoming Projects!<br>
+                    HowdyHack</a>
                 </div>
             </div>
         </div> 
