--- a/page1.html
+++ b/page1.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mystyle.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="button.js"></script>
     <title>Overview</title>
 </head>
 <body>
@@ -91,14 +92,17 @@
     I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and more predicitive analysises. 
 
 
-    <nav class="navbar">
+    <nav class="footer_navbar">
         <div class="links">
             <ul>
                 <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
                 <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
                 <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+                <li><button id="toggle-theme">Change Theme</button></li>
             </ul>
         </div>
     </nav>
+
+    <script src="theme_switch.js"></script>
 </body>
 </html>
