Added styling to page1 & Resume to footer

--- a/page1.html
+++ b/page1.html
@@ -21,55 +21,53 @@
             </ul>
         </div>
     </nav>
-    
-    <h2> About Julia</h2>
-    <p> Hello, my name is Julia Arukakkal. I am a junior Computer Science major at Texas A&M, aiming for a career in technology and software development.
+    <div class="style1">
+        <img src="dkd_headshot.png" alt="Julia Arukakkal">
+        <h2>About Julia</h2>
+        <p>Hello, my name is Julia Arukakkal. I am a junior Computer Science major at Texas A&M, aiming for a career in technology and software development.
         Currently, I work in a genomics research lab where I apply my programming skills to analyze, build pipelines, and interpret large genomes. 
         I enjoy unravelling complex problems and investigating different viewpoints with a team. In addition, I value strong communication & leadership skills 
         through volunteering, teaching computer science, & leading women-focused organizations. I am eager to use my skills to build exciting and innovative technologies.</p>
+    </div>
 
     <h2> Technical Skills</h2>
         <h3> General Programming </h3>
-        <h4> C++</h4>
-        Classes: Data Structures & Algorithms, Computer Organization, Program Design & Concepts
-
-        <h4> Java </h4>
-        Classes: Data Structure & Algorithms, Programming Languages
-
-        <h4>Python</h4>
-        Classes: Engineering Lab 102
-        Teaching: Peer Teacher (Fall 2023)
-        Projects: Used in AI4All to construct Machine Learning Model, Used for SEC Directed Internship for Camera Position Modelling
+        <ul class="tech-skills">
+            <li><button class="tech-button"><a href="https://cplusplus.com/">C++</a></button> </li>
+            <li><button class="tech-button"><a href="https://docs.oracle.com/javase/8/docs/api/overview-summary.html">Java</a></button> </li>
+            <li><button class="tech-button"><a href="https://docs.python.org/3/">Python</a></button> </li>
+            <li><button class="tech-button"><a href="https://www.r-project.org/">R</a></button> </li>
+        </ul>
+        <p>I have studied Data Structures & Algorithms(C++/R), Computer Organization(C++), Program Design & Concepts(C++), and Programming Languages(Java). I have practical experience with Python through serving as a Peer Teacher for the introductory Python engineering course. Additionally, I have utilized Python for Machine Learning and Camera Position Models. My work with R includes attending HPRC workshops and applying it for creating graphs in the Aggie Research Projects lab.
+        </p>
         
-
-        <h4>R</h4>
-        Classes: HPRC workshops, Statistics
-        Projects: Used in Aggie Research Project for graphing plots
-
         <h3> Workflow Management </h3>
+        <ul class="tech-skills">
+            <li><button class="tech-button"><a href="https://www.nextflow.io/">Nextflow</a></button> </li>
+            <li><button class="tech-button"><a href="https://snakemake.readthedocs.io/en/stable/executing/cli.html">SnakeMake</a></button> </li>
+            <li><button class="tech-button"><a href="https://hprc.tamu.edu/kb/User-Guides/Grace/Batch/#alternative-specifications">SLURM/Bash</a></button> </li>
+        </ul>
+        I have used nextflow for a pipeline for using genetics to figure out phylogeny.  
+        I have used snakemake to construct and adapt a pipeline for genome processing.
+        I use SLURM scheduler/job scripts/Linux OS regularly use in research and in classes.
 
-        <h4> Nextflow</h4>
-        Projects: Used for a pipeline for figuring out the ancestry of different genes.  
-
-
-        <h4> SnakeMake</h4>
-        Projects: Used to construct and adapt a pipeline for genome processing.
-
-        <h4> SLURM Scheduler/Bash </h4>
-        Regularly use in research labs for scheduling jobs that require a lot of time.
-
-        <h3> Functional Language</h3>
-
+        <h3> Functional Language & Assembly</h3>
+        <ul class="tech-skills"></ul>
+            <li><button class="tech-button"><a href="https://www.nextflow.io/">Scheme/Dr. Racket</a></button> </li>
+            <li><button class="tech-button"><a href="https://snakemake.readthedocs.io/en/stable/executing/cli.html">y86/x86</a></button> </li>
+        </ul>
         <h4>Scheme/Dr. Racket</h4>
         Classes: Program Design & Concepts
-
-        <h3> Assembly </h3>
         <h4>y86/x86</h4>
         Classes: Computer Organization, Introduction to Computer Systems(ongoing)
         Projects: Created y86 64-bit CPU
 
         <h3> Web/App Development </h3>
-
+        <ul class="tech-skills"></ul>
+            <li><button class="tech-button"><a href="https://www.nextflow.io/">CSS & Html</a></button> </li>
+            <li><button class="tech-button"><a href="https://snakemake.readthedocs.io/en/stable/executing/cli.html">SnakeMake</a></button> </li>
+            <li><button class="tech-button"><a href="https://hprc.tamu.edu/kb/User-Guides/Grace/Batch/#alternative-specifications">SLURM/Bash</a></button> </li>
+        </ul>
         <h4>CSS & HTML</h4>
         Classes: Foundations of Software Engineering(ongoing)
         Projects: Constructed research website using customized Bootstrap template 
@@ -90,7 +88,6 @@
 
     <h3>Machine Learning</h3>
     I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and more predicitive analysises. 
-
 
     <nav class="footer_navbar">
         <div class="links">
