--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
                 <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
                 <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+                <li><a href="Julia_Arukakkal Resume - Sophomore.pdf" download><i class="fa fa-lg fa-file-text"></i>   Resume</a></li>
                 <li><button id="toggle-theme">Change Theme</button></li>
             </ul>
         </div>
