--- a/page1.html
+++ b/page1.html
@@ -52,43 +52,40 @@
         I use SLURM scheduler/job scripts/Linux OS regularly use in research and in classes.
 
         <h3> Functional Language & Assembly</h3>
-        <ul class="tech-skills"></ul>
-            <li><button class="tech-button"><a href="https://www.nextflow.io/">Scheme/Dr. Racket</a></button> </li>
-            <li><button class="tech-button"><a href="https://snakemake.readthedocs.io/en/stable/executing/cli.html">y86/x86</a></button> </li>
+        <ul class="tech-skills">
+            <li><button class="tech-button"><a href="https://docs.racket-lang.org/reference/">Scheme/Dr. Racket</a></button> </li>
+            <li><button class="tech-button">y86/x86</button> </li>
         </ul>
-        <h4>Scheme/Dr. Racket</h4>
-        Classes: Program Design & Concepts
-        <h4>y86/x86</h4>
-        Classes: Computer Organization, Introduction to Computer Systems(ongoing)
-        Projects: Created y86 64-bit CPU
-
+        <p> I used Scheme/Dr. Racket in my Program Design & Concepts Class. I used both y86 and x86 assembly language in my Computer Organization and Computer Systems class (ongoing)</p>
+        
         <h3> Web/App Development </h3>
-        <ul class="tech-skills"></ul>
-            <li><button class="tech-button"><a href="https://www.nextflow.io/">CSS & Html</a></button> </li>
-            <li><button class="tech-button"><a href="https://snakemake.readthedocs.io/en/stable/executing/cli.html">SnakeMake</a></button> </li>
-            <li><button class="tech-button"><a href="https://hprc.tamu.edu/kb/User-Guides/Grace/Batch/#alternative-specifications">SLURM/Bash</a></button> </li>
+        <ul class="tech-skills">
+            <li><button class="tech-button"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS & HTML</a></button> </li>
+            <li><button class="tech-button"><a href="https://fxdocs.github.io/docs/html5/">JavaFX</a></button> </li>
+            <li><button class="tech-button"><a href="https://www.opengl.org/sdk/">OpenGL</a></button> </li>
         </ul>
-        <h4>CSS & HTML</h4>
-        Classes: Foundations of Software Engineering(ongoing)
-        Projects: Constructed research website using customized Bootstrap template 
-
-        <h4>JavaFX</h4>
-        Classes: Program Design & Concepts
-        Projects: WORDLE App
-
-        <h4>OpenGL</h4>
-        Classes: Computer Graphics(ongoing)
+        <p>I have studied Foundations of Software Engineering(ongoing, CSS/HTML/JavaScript), Program Design & Concepts(JavaFX), and Computer Graphics(OpenGL). I have also constructed a research website using CSS and HTML.</p>
 
 
 
     <h2> Technical Areas of Interest </h2>
-    <h3> Big Data</h3>
-    Through my experience in genomics, I have had the opportunity to work on very large datasets (8 Gb). I enjoy finding patterns in what orginally seems like noise, and being able to tell a story with it. 
-    This interest was furthered through exploring different data structures and their potential to optimize many commercial avenues. In the future, I would like to investigate on methods to make these processes more efficient, such as using GPUs rather than CPUs. 
 
-    <h3>Machine Learning</h3>
-    I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and more predicitive analysises. 
+    <div class="style1">
+        <img src="dkd_headshot.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h3 style="color:rgb(222, 193, 118)">Big Data</h3>
+        <p>Through my experience in genomics, I have had the opportunity to work on very large datasets (8 Gb). I enjoy finding patterns in what orginally seems like noise, and being able to tell a story with it. 
+            This interest was furthered through exploring different data structures and their potential to optimize many commercial avenues. In the future, I would like to investigate on methods to make these processes more efficient, such as using GPUs rather than CPUs.</p>
+    </div>
 
+    <div class="style1">
+        <img src="dkd_headshot.png " style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h3 style="color:rgb(222, 193, 118)">Machine Learning</h3>
+        <p>I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and predictive analysis.</p>
+    </div>
+     
+    <br>
+    <br>
+    <button class="tech-button"><a href="Julia_Arukakkal Resume - Sophomore.pdf" download> Click here for my resume.</a></button> 
     <nav class="footer_navbar">
         <div class="links">
             <ul>
@@ -99,6 +96,7 @@
             </ul>
         </div>
     </nav>
+
 
     <script src="theme_switch.js"></script>
 </body>
