Added images for pg 1
Added images for pg1

--- a/page1.html
+++ b/page1.html
@@ -71,14 +71,14 @@
     <h2> Technical Areas of Interest </h2>
 
     <div class="style1">
-        <img src="dkd_headshot.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <img src="big_data.jpg" style="transform:scale(0.8)" alt="Julia Arukakkal">
         <h3 style="color:rgb(222, 193, 118)">Big Data</h3>
         <p>Through my experience in genomics, I have had the opportunity to work on very large datasets (8 Gb). I enjoy finding patterns in what orginally seems like noise, and being able to tell a story with it. 
             This interest was furthered through exploring different data structures and their potential to optimize many commercial avenues. In the future, I would like to investigate on methods to make these processes more efficient, such as using GPUs rather than CPUs.</p>
     </div>
 
     <div class="style1">
-        <img src="dkd_headshot.png " style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <img src="machine_learning.jpg" style="transform:scale(0.8)" alt="Julia Arukakkal">
         <h3 style="color:rgb(222, 193, 118)">Machine Learning</h3>
         <p>I intially thought Machine Learning was solely used for search engines, but found that they can be used for a variety of uses. I have personally used it in genomic processing in a tool designed to reduce machine bias, as well as a tool to predict stroke risk. In the future, I would like to investigate the role of machine learning in constructing protein alignments and predictive analysis.</p>
     </div>
@@ -92,6 +92,7 @@
                 <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
                 <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
                 <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+                <li><a href="Julia_Arukakkal Resume - Sophomore.pdf" download><i class="fa fa-lg fa-file-text"></i>   Resume</a></li>
                 <li><button id="toggle-theme">Change Theme</button></li>
             </ul>
         </div>
