--- a/page3.html
+++ b/page3.html
@@ -46,12 +46,15 @@
         <li>Proctoring & grading exams and quizzes to uphold academic integrity</li>
     </ol>
 
+    <div class="gallery" id="gallery"></div>
+    <script src="photo_gallery.js"></script>
     <nav class="footer_navbar">
         <div class="links">
             <ul>
                 <li><a href="https://www.linkedin.com/in/julia-arukakkal-416358aa/"><i class="fa fa-lg fa-linkedin-square"></i>   Linkedin</a></li>
                 <li><a href="https://github.com/juaruk"><i class="fa fa-lg fa-github"></i>   Personal GitHub</a></li>
                 <li><a href="mailto:julia.arukakkal@gmail.com"><i class="fa fa-lg fa-envelope"></i>   Email</a></li>
+                <li><a href="Julia_Arukakkal Resume - Sophomore.pdf" download><i class="fa fa-lg fa-file-text"></i>   Resume</a></li>
                 <li><button id="toggle-theme">Change Theme</button></li>
             </ul>
         </div>
