Updated photo gallery for Service Page

--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
     <link id="theme-stylesheet" rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Projects</title>
+    <script src="button.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -20,20 +21,24 @@
             </ul>
         </div>
     </nav>
+
     <h2>Behavioral Plasticity Research Institute - Dr. Song's Lab</h2>
     Dates: May 2024 - Aug 2024 <br>
     Tasks:
-    <ol> 
-        <li>Created github pages website customizing Bootstrap template with embedded R and CSS code</li>
-        <li>Added Shiny App for interactive table of high quality NCBI genomes</li>
-        <li>Explored TOGA pipeline using nextflow</li>
-        <li><ol>Adjusted DNA processing pipeline  using SnakeMake for Mormon Crickets
-            <li>Compared trimming methods on quality of trim (trimmomatic and fastp)</li>
-            <li>Compared mapping method on quality of map (bowtie2 and bwa2)</li>
-            <li>Debugged, Updated packages, and ran pipeline to fit the TAMU HPRC grace cluster</li>
-            <li>Usage of bash scripts, job scripts, and SLURM Scheduler. </li>
-        </li> </ol>
+    <ol>
+        <li>Created GitHub Pages website customizing Bootstrap template with embedded R and CSS code</li>
+        <li>Added Shiny App for interactive table of high-quality NCBI genomes</li>
+        <li>Explored TOGA pipeline using Nextflow</li>
+        <li>Adjusted DNA processing pipeline using SnakeMake for Mormon Crickets
+            <ol type="a">
+                <li>Compared trimming methods on quality of trim (Trimmomatic and Fastp)</li>
+                <li>Compared mapping methods on quality of map (Bowtie2 and BWA2)</li>
+                <li>Debugged, updated packages, and ran pipeline to fit the TAMU HPRC Grace cluster</li>
+                <li>Used Bash scripts, job scripts, and SLURM Scheduler</li>
+            </ol>
+        </li>
     </ol>
+    
 
 
     <h2>Aggie Research Project: The Key to Better Phylogenomics</h2>
