--- a/page3.html
+++ b/page3.html
@@ -20,32 +20,39 @@
             </ul>
         </div>
     </nav>
+    <div class="style1">
+        <img src="SWE_TAMU_4C.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h2><a href="https://www.swetamu.com/swelites">SWElites - Member & Counselor</a></h2>
+        Dates: Aug 2022 - May 2024
+        <ol> 
+            <li>Conducted presentations and resume reviews for helping undergraduate students with job search</li>
+            <li>Educated undergraduate members on stress management, habit formation, & basic excel skills</li>
+        </ol>
+    </div>
+    
 
-    <h2>SWElites - Member & Counselor</h2>
-    Dates: Aug 2022 - May 2024
-    Tasks:
-    <ol> 
-        <li>Conducted presentations and resume reviews for helping undergraduate students with job search</li>
-        <li>Educated undergraduate members on stress management, habit formation, & basic excel skills</li>
-    </ol>
+    <div class="style1">
+        <img src="DKD_Crest.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h2><a href="https://www.deltakappadelta.com/">Delta Kappa Delta Sorority</a></h2>
+        Dates: Dec. 2022 - Present
+        <ol>
+            <li>Managed recruitment timeline, forms, and events</li>
+            <li> Regularly volunteered & organized events for child abuse & awareness</li>
+        </ol>
+    </div>
 
-    <h2>Delta Kappa Delta - Sorority</h2>
-    Dates: Dec. 2022 - Present
-    Tasks:
-    <ol>
-        <li>Managed recruitment timeline, forms, and events</li>
-        <li> Regularly volunteered & organized events for child abuse & awareness</li>
-    </ol>
+    <div class="style1">
+        <img src="TA.jpg" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h2>Teaching Assistant: ENGR 102</h2>
+        Dates: Aug 2023-Dec 2023
+        <ol>
+            <li>Providing personalized feedback to students on Python programming during lectures & office hours</li>
+            <li>Advising students on proper coding practices</li>
+            <li>Proctoring & grading exams and quizzes to uphold academic integrity</li>
+        </ol>
+    </div>
 
-    <h2>Teaching Assistant: ENGR 102</h2>
-    Dates: Aug 2023-Dec 2023
-    Tasks:
-    <ol>
-        <li>Providing personalized feedback to students on Python programming during lectures & office hours</li>
-        <li>Advising students on proper coding practices</li>
-        <li>Proctoring & grading exams and quizzes to uphold academic integrity</li>
-    </ol>
-
+    <h2>Photo Gallery</h2>
     <div class="gallery" id="gallery"></div>
     <script src="photo_gallery.js"></script>
     <nav class="footer_navbar">
