--- a/page4.html
+++ b/page4.html
@@ -6,6 +6,8 @@
     <title>My Blog</title>
     <link id="theme-stylesheet" rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="script.js"></script>
+    <script src="button.js"></script>
 </head>
 <body>
     <nav class="navbar">
