Updated images in projects section

--- a/page2.html
+++ b/page2.html
@@ -22,66 +22,77 @@
         </div>
     </nav>
 
-    <h2>Behavioral Plasticity Research Institute - Dr. Song's Lab</h2>
-    Dates: May 2024 - Aug 2024 <br>
-    Tasks:
-    <ol>
-        <li>Created GitHub Pages website customizing Bootstrap template with embedded R and CSS code</li>
-        <li>Added Shiny App for interactive table of high-quality NCBI genomes</li>
-        <li>Explored TOGA pipeline using Nextflow</li>
-        <li>Adjusted DNA processing pipeline using SnakeMake for Mormon Crickets
-            <ol type="a">
-                <li>Compared trimming methods on quality of trim (Trimmomatic and Fastp)</li>
-                <li>Compared mapping methods on quality of map (Bowtie2 and BWA2)</li>
-                <li>Debugged, updated packages, and ran pipeline to fit the TAMU HPRC Grace cluster</li>
-                <li>Used Bash scripts, job scripts, and SLURM Scheduler</li>
-            </ol>
-        </li>
-    </ol>
-    
-
-
+    <h2><a href="https://github.com/juaruk/Orthoptera">Behavioral Plasticity Research Institute - Dr. Song's Lab</a></h2>
+    <div class="style1">
+        <img src="Song.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        Dates: May 2024 - Aug 2024
+        <ol>
+            <li><a href="https://juaruk.github.io/Orthoptera/">GitHub Pages website with customized Bootstrap template, embedded R & CSS code</a></li>
+            <li>Interactive Shiny app table of high-quality NCBI genomes</li>
+            <li>Explored TOGA pipeline using Nextflow</li>
+            <li>Adjusted DNA processing pipeline using SnakeMake for Mormon Crickets
+                <ol type="a">
+                    <li>Compared trimming methods on quality of trim (Trimmomatic and Fastp)</li>
+                    <li>Compared mapping methods on quality of map (Bowtie2 and BWA2)</li>
+                    <li>Debugged, updated packages, and ran pipeline to fit the TAMU HPRC Grace cluster</li>
+                    <li>Used Bash scripts, job scripts, and SLURM Scheduler</li>
+                </ol>
+            </li>
+        </ol>
+    </div>
+    <br>
+    <br>
     <h2>Aggie Research Project: The Key to Better Phylogenomics</h2>
-    Dates: Aug 2022 - Jan 2023 <br>
-    Tasks:
-    <ol> 
-        <li>Ran job scripts for analyzing hybridization of Polar Bears to Brown Bears</li>
-        <li>Used short read Polar Bear samples mapped to long read Brown Bear genome</li>
-        <li>Generated recombination map</li>
-        <li>Analyzed quality of process (QualiMap and MultiQC reports)</li>
-        <li>Presented to research faculty about process & findings.</li>
-    </ol>
-    Dates: Jan 2023 - May 2023<br>
-    Tasks:
-    <ol> 
-        <li>Adjusting pipeline to see if various factors (gender ratio of samples & number of samples) had an impact on final result.</li>
-        <li>Using R to investigate if pan-mammal rate could be fine-tuned using existing species-specific recombination rates for recombination-rate model</li>
-        <li>Generating recombination map for Peregrine Falcons for research into the evolution of the bird's Z chromosome versus the mammal's X chromosome. </li>
-    </ol>
-    Dates: Aug 2023 - May 2024 <br>
-    Tasks:
-    <ol>
-        <li> Investigated zooCondels through BLAT to find relations between species, transcription factors, associated genes, etc.</li>
-        <li> Recombination map generated for Rodentia order using Clara Parabricks</li>
-    </ol>
-
-    <h2>SEC-Directed Internship</h2>
-    Dates: May 2023 - Aug 2023
-    Tasks:
-    <ol>
-        <li>Determined position of robotic arm relative to space port using fiducials for docking of spacecrafts</li>
-        <li>Recognized fiducial using Python OpenCV package and Raspberry Pi camera</li>
-        <li>Presented solution pitch, including software development production, timeline and cost, to Arkysis CEO</li>
-    </ol>
-
-    <h2>AI4All - DiscoverAI</h2>
-    Dates: Aug 2023 - Nov 2023
-    Tasks:
-    <ol>
-        <li>Created & presented Random Forest Machine Learning model to categorize risk of stroke based on 14 factors </li>
-        <li>Checked quality of dataset and of model using heatmaps, learning curves, and confusion matrices</li>
-    </ol>
-
+    <div class="style1">
+        <img src="polar_bear.jpg" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        Dates: Aug 2022 - Jan 2023
+        <ol>
+            <li>Ran job scripts for analyzing hybridization of Polar Bears to Brown Bears</li>
+            <li>Used short read Polar Bear samples mapped to long read Brown Bear genome</li>
+            <li>Generated recombination map</li>
+            <li>Analyzed quality of process (QualiMap and MultiQC reports)</li>
+            <li>Presented to research faculty about process & findings</li>
+        </ol>
+    </div>
+    <div class="style1">
+        <img src="falcon.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        Dates: Jan 2023 - May 2023
+        <ol>
+            <li>Adjusted pipeline to see if various factors (gender ratio of samples & number of samples) had an impact on final result</li>
+            <li>Used R to investigate if pan-mammal rate could be fine-tuned using existing species-specific recombination rates for recombination-rate model</li>
+            <li>Generated recombination map for Peregrine Falcons for research into the evolution of the bird's Z chromosome versus the mammal's X chromosome</li>
+        </ol>
+    </div>
+    <div class="style1">
+        <img src="blat.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        Dates: Aug 2023 - May 2024
+        <ol>
+            <li>Investigated zooCondels through BLAT to find relations between species, transcription factors, associated genes, etc.</li>
+            <li>Generated recombination map for Rodentia order using Clara Parabricks</li>
+        </ol>
+    </div>
+    <br><br>
+    <div class="style1">
+        <img src="arkysis.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h2>SEC-Directed Internship</h2>
+        Dates: May 2023 - Aug 2023
+        <ol>
+            <li>Determined position of robotic arm relative to space port using fiducials for docking of spacecrafts</li>
+            <li>Recognized fiducial using Python OpenCV package and Raspberry Pi camera</li>
+            <li>Presented solution pitch, including software development production, timeline, and cost, to Arkysis CEO</li>
+        </ol>
+    </div>
+    <br><br>
+    <div class="style1">
+        <img src="ai4all.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <h2>AI4All - DiscoverAI</h2>
+        Dates: Aug 2023 - Nov 2023
+        <ol>
+            <li>Created & presented Random Forest Machine Learning model to categorize risk of stroke based on 14 factors</li>
+            <li>Checked quality of dataset and of model using heatmaps, learning curves, and confusion matrices</li>
+        </ol>
+    </div>
+    
     <nav class="footer_navbar">
         <div class="links">
             <ul>
