Altered style1 text & image containers and photo gallery

--- a/page2.html
+++ b/page2.html
@@ -25,6 +25,7 @@
     <h2><a href="https://github.com/juaruk/Orthoptera">Behavioral Plasticity Research Institute - Dr. Song's Lab</a></h2>
     <div class="style1">
         <img src="Song.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        <br>
         Dates: May 2024 - Aug 2024
         <ol>
             <li><a href="https://juaruk.github.io/Orthoptera/">GitHub Pages website with customized Bootstrap template, embedded R & CSS code</a></li>
@@ -45,6 +46,7 @@
     <h2>Aggie Research Project: The Key to Better Phylogenomics</h2>
     <div class="style1">
         <img src="polar_bear.jpg" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        <br>
         Dates: Aug 2022 - Jan 2023
         <ol>
             <li>Ran job scripts for analyzing hybridization of Polar Bears to Brown Bears</li>
@@ -56,6 +58,7 @@
     </div>
     <div class="style1">
         <img src="falcon.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        <br>
         Dates: Jan 2023 - May 2023
         <ol>
             <li>Adjusted pipeline to see if various factors (gender ratio of samples & number of samples) had an impact on final result</li>
@@ -65,8 +68,9 @@
     </div>
     <div class="style1">
         <img src="blat.png" style="transform:scale(1.0)" alt="Julia Arukakkal">
+        <br>
         Dates: Aug 2023 - May 2024
-        <ol>
+        <ol class="ol_styled">
             <li>Investigated zooCondels through BLAT to find relations between species, transcription factors, associated genes, etc.</li>
             <li>Generated recombination map for Rodentia order using Clara Parabricks</li>
         </ol>
@@ -74,6 +78,7 @@
     <br><br>
     <div class="style1">
         <img src="arkysis.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <br>
         <h2>SEC-Directed Internship</h2>
         Dates: May 2023 - Aug 2023
         <ol>
@@ -85,6 +90,7 @@
     <br><br>
     <div class="style1">
         <img src="ai4all.png" style="transform:scale(0.8)" alt="Julia Arukakkal">
+        <br>
         <h2>AI4All - DiscoverAI</h2>
         Dates: Aug 2023 - Nov 2023
         <ol>
