--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,7 @@
     <link id="theme-stylesheet" rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Service</title>
+    <script src="button.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -55,6 +56,8 @@
     <h2>Photo Gallery</h2>
     <div class="gallery" id="gallery"></div>
     <script src="photo_gallery.js"></script>
+    <br>
+    <br>
     <nav class="footer_navbar">
         <div class="links">
             <ul>
