adding new pages CSCE 432

--- a/page4.html
+++ b/page4.html
@@ -19,6 +19,7 @@
                 <li><a href="page2.html"><i class="fa fa-lg fa-laptop"></i>   Projects</a></li>
                 <li><a href="page3.html"><i class="fa fa-lg fa-handshake-o"></i>   Service</a></li>
                 <li><a href="page4.html"><i class="fa fa-lg fa-pencil"></i>   Blog</a></li>
+                <li><a href="page5.html"><i class="fa fa-lg fa-eye"></i>   Accessible Homepage</a></li>
             </ul>
         </div>
     </nav>
